// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have error 1`] = `
<div
  className="flex justify-center align--center min-h-screen"
>
  <form
    className="w-8"
    onSubmit={[Function]}
  >
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          autoFocus={true}
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          value=""
        />
        <label
          htmlFor="email"
        >
          in.email
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          type="password"
          value=""
        />
        <label
          htmlFor="password"
        >
          in.password
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 flex justify-between"
      >
        <div
          className="flex flex-column"
        >
          <a
            href="/signup"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            in.signup
          </a>
        </div>
        <button
          className="p-button p-component"
          disabled={false}
          type="submit"
        >
          <div
            className="pi pi-lock mr-2"
          />
          in.submit
        </button>
        <label
          htmlFor=""
        />
      </span>
    </div>
    <div
      className="absolute bottom-0"
      id={null}
      style={null}
    >
      <div>
        <div
          className="p-message p-component p-message-error"
          onClick={[Function]}
        >
          <div
            className="p-message-wrapper"
          >
            <span
              className="p-message-icon pi  pi-times-circle"
            />
            <span
              className="p-message-summary"
            >
              in.error
            </span>
            <span
              className="p-message-detail"
            />
            <button
              className="p-message-close p-link"
              onClick={[Function]}
              type="button"
            >
              <i
                className="p-message-close-icon pi pi-times"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`should load 1`] = `
<div
  className="flex justify-center align--center min-h-screen"
>
  <form
    className="w-8"
    onSubmit={[Function]}
  >
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          autoFocus={true}
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          value=""
        />
        <label
          htmlFor="email"
        >
          in.email
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          type="password"
          value=""
        />
        <label
          htmlFor="password"
        >
          in.password
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 flex justify-between"
      >
        <div
          className="flex flex-column"
        >
          <a
            href="/signup"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            in.signup
          </a>
        </div>
        <button
          className="p-button p-component p-disabled"
          disabled={true}
          type="submit"
        >
          <div
            className="pi pi-spin pi-spinner mr-2"
          />
          in.submit
        </button>
        <label
          htmlFor=""
        />
      </span>
    </div>
    <div
      className="absolute bottom-0"
      id={null}
      style={null}
    >
      <div />
    </div>
  </form>
</div>
`;

exports[`should render 1`] = `
<div
  className="flex justify-center align--center min-h-screen"
>
  <form
    className="w-8"
    onSubmit={[Function]}
  >
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          autoFocus={true}
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="email"
          name="email"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          value=""
        />
        <label
          htmlFor="email"
        >
          in.email
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 undefined"
      >
        <input
          className="p-inputtext p-component flex flex-1  min-w-full"
          id="password"
          name="password"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyPress={[Function]}
          type="password"
          value=""
        />
        <label
          htmlFor="password"
        >
          in.password
        </label>
      </span>
    </div>
    <div
      className="p-field mb-5"
    >
      <span
        className="flex p-float-label mx-2 flex justify-between"
      >
        <div
          className="flex flex-column"
        >
          <a
            href="/signup"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            in.signup
          </a>
        </div>
        <button
          className="p-button p-component"
          disabled={false}
          type="submit"
        >
          <div
            className="pi pi-lock mr-2"
          />
          in.submit
        </button>
        <label
          htmlFor=""
        />
      </span>
    </div>
    <div
      className="absolute bottom-0"
      id={null}
      style={null}
    >
      <div />
    </div>
  </form>
</div>
`;
